# local-research-assistant

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/api/: alembic.ini
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260628_0001_initial_schema.py
apps/api/src/local_research_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api/src/lra_api/: __init__.py  main.py
apps/api/src/lra_api/api/: deps.py  router.py
apps/api/src/lra_api/core/: config.py  logging.py  rate_limit.py  security.py
apps/api/src/lra_api/db/: base.py  session.py
apps/api/src/lra_api/schemas/: auth.py  chat.py  document.py  graph.py  knowledge.py  notebook.py  research.py  search.py  study.py  system.py
apps/api/src/lra_api/utils/: uploads.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_app_smoke.py
apps/api/tests/unit/: test_chunking.py  test_connectors.py  test_parsers.py  test_security.py
apps/web/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/web/src/: main.tsx
apps/web/src/app/: router.tsx
apps/web/src/components/: Layout.tsx  Surface.tsx
apps/web/src/pages/: ChatPage.tsx  DashboardPage.tsx  DocumentsPage.tsx  FlashcardsPage.tsx  KnowledgeBasePage.tsx  KnowledgeGraphPage.tsx  LoginPage.tsx  ModelManagerPage.tsx  MonitoringPage.tsx  NotebooksPage.tsx  OcrPage.tsx  QuizzesPage.tsx  SearchPage.tsx  SettingsPage.tsx  StudyToolsPage.tsx  WorkspacePage.tsx
apps/web/src/services/: api.ts
apps/web/src/stores/: auth.ts
apps/web/src/styles/: index.css
apps/web/tests/: navigation.spec.ts
docs/api/: API.md
docs/architecture/: ARCHITECTURE.md  DATABASE.md  FOLDER_STRUCTURE.md
docs/guides/: BEGINNER_LEARNING_GUIDE.md  DEPLOYMENT_GUIDE.md  DOCKER_GUIDE.md  FAQ.md  GPU_SETUP_GUIDE.md  INSTALLATION.md  KNOWLEDGE_GRAPH_GUIDE.md  OCR_GUIDE.md  OLLAMA_CONFIGURATION_GUIDE.md  PERFORMANCE_TUNING_GUIDE.md  RAG_GUIDE.md  SEARCH_GUIDE.md  TROUBLESHOOTING.md  ZERO_TO_HERO_STUDY_HANDBOOK.md
infra/dashboards/: lra_overview.json
infra/docker/: Dockerfile.api  Dockerfile.web
infra/grafana/provisioning/dashboards/: dashboard.yml
infra/prometheus/: prometheus.yml
infra/scripts/: backup_all.sh  bootstrap_admin.sh  restore_all.sh
(+28 files in other folders)
